--- a/tracking.html
+++ b/tracking.html
@@ -88,5 +88,9 @@
         </div>
       </div>
     </div>
+    <script>
+      const url = new URL(window.location.href);
+      console.log(url.searchParams);
+    </script>
   </body>
 </html>
